# lestrade

./: locust.conf  locustfile.py  main.py  pyproject.toml  readme.md
config/: .env
results/24_10_2022_19_33_00_733794/: merged_results.csv
results/28_10_2022_17_33_18_849416/: merged_results.csv
results/28_10_2022_17_33_18_849416/test_1/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_10/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_11/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_12/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_13/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_14/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_15/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_16/: result.html  result_failures.csv  result_stats.csv  result_stats_history.csv
results/28_10_2022_17_33_18_849416/test_17/: result.html  result_failures.csv  result_stats.csv  (+1 more)
scenarios/: scenario_cassandra.csv  scenario_mongo.csv  scenario_mongo_test.csv
src/api/: cassandra_api.py  mongodb_api.py  redis_api.py
src/helpers/: const.py  helper.py  processors.py
(+133 files in other folders)
